--- a/.github/workflows/processGP.yml
+++ b/.github/workflows/processGP.yml
@@ -15,15 +15,14 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-    - uses: actions/checkout@v2
-
-    # Runs a single command using the runners shell
-    - name: Run a one-line script
-      run: echo Hello, world!
-
-    # Runs a set of commands using the runners shell
-    - name: Run a multi-line script
+    - name: Checkout Repo
+      uses: actions/checkout@v1
+    
+    - name: Process Model
       run: |
-        echo Add other actions to build,
-        echo test, and deploy your project.
+        python 1-Data-step.py
+
+    - name: Push changes
+      uses: ad-m/github-push-action@master
+      with:
+        github_token: ${{ secrets.token }}
