--- a/.github/workflows/processGP.yml
+++ b/.github/workflows/processGP.yml
@@ -17,6 +17,13 @@ jobs:
     steps:
     - name: Checkout Repo
       uses: actions/checkout@v1
+
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: us-west-2
     
     - name: Process Model
       run: |
@@ -25,4 +32,8 @@ jobs:
     - name: Push changes
       uses: ad-m/github-push-action@master
       with:
-        github_token: ${{ secrets.token }}
+        github_token: ${{ secrets.TOKEN }}
+
+    - name: Stop AWS EC2
+      run: |
+        #aws ec2 stop-instances --instance-ids i-0c3edd98087da7524 | at now + 1 minute
