--- a/.github/workflows/processGP.yml
+++ b/.github/workflows/processGP.yml
@@ -13,20 +13,21 @@ jobs:
     # The type of runner that the job will run on
     runs-on: self-hosted
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
+  # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    - name: Checkout Repo
-      uses: actions/checkout@v1
-
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: us-west-2
-    
+
+    - name: Checkout Repo
+      uses: actions/checkout@v1
+   
     - name: Process Model
       run: |
+        conda activate base
         python 1-Data-step.py
 
     - name: Push changes
