--- a/.github/workflows/processGP.yml
+++ b/.github/workflows/processGP.yml
@@ -16,6 +16,10 @@ jobs:
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: us-west-2
 
+    - name: Login to Amazon ECR
+      id: login-ecr
+      uses: aws-actions/amazon-ecr-login@v1
+
     - name: Checkout Repo
       uses: actions/checkout@v1   
 
