--- a/.github/workflows/processGP.yml
+++ b/.github/workflows/processGP.yml
@@ -25,7 +25,7 @@ jobs:
 
     - name: Process Model
       run: |
-        python 0-Process-model.py
+#        python 0-Process-model.py
     
     - name: Push changes
       uses: ad-m/github-push-action@master
