added commit message

--- a/.github/workflows/processGP.yml
+++ b/.github/workflows/processGP.yml
@@ -26,6 +26,13 @@ jobs:
     - name: Process Model
       run: |
         python 0-Process-model.py
+        git add data/
+        
+    - name: Commit files
+      run: |
+        git config --local user.email "action@github.com"
+        git config --local user.name "GitHub Action"
+        git commit -m "Updating GP model" -a
             
     - name: Push changes
       uses: ad-m/github-push-action@master
